<resources>
    <string name="app_name">BingoSSOrder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageview_label"></string>
    <string name="tab_manage">菜品管理</string>
    <string name="tab_kinds">菜品分类</string>
    <string name="tab_size">菜品规格</string>
    <string name="tab_time">上架时间</string>

    <string name="all">全部</string>
    <string name="on_sale">已上架</string>
    <string name="off_sale">未上架</string>
    <string name="recommend">推荐</string>
    <string name="isOnSaleNow">是否上架</string>
    <string name="food_pic">图   像:</string>
    <string name="add">添加</string>

    <string name="layout_time_mon">周一</string>
    <string name="layout_time_tue">周二</string>
    <string name="layout_time_wed">周三</string>
    <string name="layout_time_thu">周四</string>
    <string name="layout_time_fri">周五</string>
    <string name="layout_time_sat">周六</string>
    <string name="layout_time_sun">周日</string>

    <string name="cancel">取消</string>
    <string name="commit">确定</string>
    <string name="input_time_duration">请输入时段名称</string>
    <string name="save">保存</string>
    <string name="food_name_label">名  称：</string>
    <string name="food_catogry_label">类  别：</string>

    <string name="food_name">菜类名称:</string>
    <string name="single_point_num">单点限量:</string>
    <string name="food_list">排	序:</string>
    <string name="food_set_meal">套餐类</string>
    <string name="food_add">添加</string>
    <string name="food_depend_on">依附菜品</string>
    <string name="compile">编辑</string>
    <string name="arrive_label">到</string>

    <string name="recyclerheader_hint_normal">pull to refresh</string>

    <string name="recyclerheader_header_hint_release">release to start refresh</string>

    <string name="recyclerheader_loading">正在加载...</string>

    <string name="recyclerheader_loading_complete">加载更多...</string>

    <string name="recyclerheader_nomore_loading">已经加载全部内容</string>

    <string name="recyclerheader_refreshing">refreshing...</string>

    <string name="recyclerheader_refresh_done">refresh done</string>

    <string name="recyclerheader_header_last_time">last update：</string>

</resources>
