<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lxy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/title_bar"
        layout="@layout/layout_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        ></include>
    <android.support.v4.view.ViewPager
        android:layout_below="@+id/title_bar"
        android:layout_above="@+id/dd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/viewpager"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/color_bg_gray"
        android:id="@+id/dd"
        android:layout_above="@+id/footer_bar"
        />
    <LinearLayout
        android:id="@+id/footer_bar"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_height">
        <jtemp.bingossorder.widget.TabLayout
            android:id="@+id/tab_manage"
            lxy:title_name="@string/tab_manage"
            lxy:src="@mipmap/iv_manage"
            lxy:need_divider="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <jtemp.bingossorder.widget.TabLayout
            android:id="@+id/tab_kinds"
            lxy:title_name="@string/tab_kinds"
            lxy:src="@mipmap/iv_kinds"
            lxy:need_divider="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <jtemp.bingossorder.widget.TabLayout
            android:id="@+id/tab_size"
            lxy:title_name="@string/tab_size"
            lxy:src="@mipmap/iv_size"
            lxy:need_divider="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <jtemp.bingossorder.widget.TabLayout
            android:id="@+id/tab_time"
            lxy:title_name="@string/tab_time"
            lxy:src="@mipmap/iv_time"
            lxy:need_divider="false"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>


    </LinearLayout>

</RelativeLayout>